--- a/index.html
+++ b/index.html
@@ -5,45 +5,25 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.12.2.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Mad Libs</title>
+    <title>Letter</title>
   </head>
   <body>
    <div class="container">
-     <h1>Let's play Mad-libs game! Type your answers: </h1>
+     <h1>You got a letter. Please enter you name:  </h1>
      <div id="blanks">
        <form>
          <div class="form-group">
-           <label for="person1">A name</label>
-           <input id="person1" class="form-control" type="text">
-         </div>
-         <div class="form-group">
-           <label for="person2">Another name</label>
-           <input id="person2" class="form-control" type="text">
-         </div>
-         <div class="form-group">
-           <label for="animal">An animal</label>
-           <input id="animal" class="form-control" type="text">
-         </div>
-         <div class="form-group">
-           <label for="exclamation">An exclamation</label>
-           <input id="exclamation" class="form-control" type="text">
-         </div>
-         <div class="form-group">
-           <label for="verb">A past tense verb</label>
-           <input id="verb" class="form-control" type="text">
-         </div>
-         <div class="form-group">
-           <label for="noun">A noun</label>
-           <input id="noun" class="form-control" type="text">
+           <label for="name">A name</label>
+           <input id="name" class="form-control" type="text">
          </div>
 
          <button type="submit" class="btn">Show me the story!</button>
        </form>
      </div>
 
-     <div id="story">
-       <h1>A fantastical adventure</h1>
-       <p>One day, <span class="person1"></span> and <span class="person2"></span> were walking through the woods, when suddenly a giant <span class="animal"></span> appeared. "<span class="exclamation"></span>", <span class="person1"></span> cried. The two of them <span class="verb"></span> as quickly possible, and when they were safe, <span class="person1"></span> and <span class="person2"></span> gave each other a giant <span class="noun"></span>.</p>
+     <div id="letter">
+       <h1>Here is your letter</h1>
+       <p>Dear <span class="name"></span> orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in <span class="name"></span> reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum., <span class="name"></span> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <span class="name"></span> quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse <span class="name"></span> cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
      </div>
    </div>
  </body>
