--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <div id="blanks">
        <form>
          <div class="form-group">
-           <label for="name">A name</label>
+           <label for="name">A name:</label>
            <input id="name" class="form-control" type="text">
          </div>
 
